# orb-selection

./: .Rhistory  .gitignore  .gitmodules  CHANGELOG.md  README.md  environment.yml  environment_macos.yml  hits1.txt  hyphy_environment.yml  overlap.txt  phyloglm_loss.csv  pyproject.toml  setup.py  upset_env.yml
assets/: SpeciesTree.nwk  SpeciesTree_N5.nwk  SpeciesTree_N5_outgroupDM.nwk  SpeciesTree_N5_outgroupDM_brlen.nwk  interesting_hits.txt  orbweavers-list.txt  orthorun_list_fams_busco90.csv  perms.RData  spidroins_LOCs.tsv  txptome_accessions.csv
data/: N5.udiv.o75_list.txt  N5_hogs_min_occ_30.txt  N5_hogs_occ_30_88.txt  N5_ptep_o30-88_LOC.txt  N5_ptep_o30_LOC.txt  N5_ptep_o30_LOCs.txt  N5_ptep_o30_annots_all.tsv  N5_ptep_o30_annots_expanded.tsv  N5_udiv_o30_annots_all.tsv  N5_udiv_o30_annots_expanded.tsv  README.md  SpeciesTree_full_brlen.nwk  Uloborus_diversus__v__Drosophila_melanogaster.tsv  araneids-orbweavers.txt  araneids.txt  buscos.csv  non-orb-weavers-list.txt  non-orb-weavers-no-araneids.txt  orbweavers-list-no-araneids.txt  orbweavers-list-no-tetragnathids.txt  orbweavers-list.txt  perms10000.RData  perms10000_no_ara.RData  perms10000_no_araneids.RData  perms10000_no_tet.RData  perms10000_no_tetragnathids.RData  perms10000_only_araneids.RData  perms10000_only_tetragnathids.RData  perms_tip_values.csv  perms_tip_values_no_ara.csv  perms_tip_values_no_araneids.csv  perms_tip_values_no_tet.csv  perms_tip_values_no_tetragnathids.csv  perms_tip_values_only_araneids.csv  perms_tip_values_only_tetragnathids.csv  ptep_go_annots.all.tsv  species_list_N5.txt  (+5 more)
(+682 files in other folders)
