[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orb-selection"
version = "0.1.0"
description = "Comparative transcriptomic analysis utilities for orb-weaving behavior in spiders"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "orb-selection contributors" }
]
keywords = ["transcriptomics", "orthogroups", "hyphy", "spiders", "bioinformatics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "numpy",
  "pandas"
]

[project.urls]
Repository = "https://github.com/GordusLab/orb-selection"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]